2012-05-09  Andreas Jaeger  <aj@suse.de>

	* nscd/nscd.c (run_modes): Make named enum, reorder so that
	default is first entry.
	(run_mode): Set type.
	(main): Remove informal message about syslog.
	(options): Fix typo.

        [BZ #14053]
        * sysdeps/x86_64/fpu/bits/mathinline.h (lrintf): Add __volatile
	to asm.
        (lrint): Likewise.
        (llrintf): Likewise.
        (llrint): Likewise.
        (rint): Likewise.
        (rintf): Likewise.
        (nearbyint): Likewise.
        (nearbyintf): Likewise.

2012-05-09  Andreas Jaeger  <aj@suse.de>
	    Pedro Alves  <palves@redhat.com>

	* nscd/nscd.c (run_mode): Use enum.
	(main): Cleanup coding style issue.

2012-05-09  Alexandre Oliva  <aoliva@redhat.com>
	    Andreas Jaeger  <aj@suse.de>

        * nscd/nscd.c (go_background): Replaced with...
        (run_mode): ... this.
	(RUN_FOREGROUND, RUN_DAEMONIZE, RUN_DEBUG): Add.
        (options): Add -F --foreground.
        (main): Implement it.
        (parse_opt): Parse it.

2012-05-09  Andreas Jaeger  <aj@suse.de>

	[BZ #14083]
	* string/bits/string2.h (strspn) [__GNUC_PREREQ(3, 2) &&
	!_HAVE_STRING_ARCH_strspn]: Cast zero to size_t to avoid
	-Wconversion warning.
	(strspn) [!__GNUC_PREREQ(3, 2) && !_HAVE_STRING_ARCH_strspn]:
	Likewise.

2012-05-09  Joseph Myers  <joseph@codesourcery.com>

	* conform/data/locale.h-data (NULL): Use macro-constant.  Require
	== 0.
	(LC_ALL): Use macro-int-constant.
	(LC_COLLATE): Likewise.
	(LC_CTYPE): Likewise.
	(LC_MESSAGES): Likewise.
	(LC_MONETARY): Likewise.
	(LC_NUMERIC): Likewise.
	(LC_TIME): Likewise.
	[ISO || ISO99 || ISO11] (LC_MESSAGES): Do not require.
	(LC_*): Change to LC_[ABCDEFGHIJKLMNOPQRSTUVWXYZ]*.
	[ISO || ISO99 || ISO11] (*_t): Do not allow.
	* conform/data/math.h-data (HUGE_VAL): Use macro-constant.
	Specify type.
	[C99-based standards] (float_t): Expect type.
	[C99-based standards] (double_t): Expect type.
	[C99-based standards] (HUGE_VALF): Use macro-constant.  Specify
	type.